# MultiMC5

./: README.md
.github/: ISSUE_TEMPLATE.md
api/gui/: CMakeLists.txt  DesktopServices.h  SkinUtils.cpp  SkinUtils.h
api/gui/icons/: IconList.cpp  IconList.h  TLMCIcon.cpp  TLMCIcon.h
api/logic/icons/: IIconList.h
api/logic/java/: JavaChecker.h  JavaCheckerJob.cpp  JavaCheckerJob.h  JavaInstall.cpp
api/logic/java/launch/: CheckJava.cpp  CheckJava.h
